--- a/ProjectIndividual.UI/Views/MainWindow.xaml
+++ b/ProjectIndividual.UI/Views/MainWindow.xaml
@@ -29,16 +29,19 @@
                 <Button Content="Run/Stop" 
                         IsEnabled="{Binding isStartable, Source={StaticResource mainGrid}}" Command="{Binding StartGridCommand, Mode=OneWay, Source={StaticResource mainGrid}}"
                         ></Button>
-                <Button Content="Next step" IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}"></Button>
+                <Button Content="Next step" IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}" Command="{Binding NextStepCommand, Mode=OneWay, Source={StaticResource mainGrid}}"></Button>
                 <!--<Button Content="Zoom in" IsEnabled="{Binding isStarted, Source={StaticResource mainGrid}}"></Button>
                 <Button Content="Zoom out"  IsEnabled="{Binding isStarted, Source={StaticResource mainGrid}}"></Button>-->
-                <Slider x:Name="uiScaleSlider" ToolTip="Zoom" Value="1" Minimum="1" Maximum="4" VerticalAlignment="Center" />
+                <Slider x:Name="uiScaleSlider" ToolTip="Zoom" Value="1" Minimum="1" Maximum="10" VerticalAlignment="Center"
+                        IsEnabled="{Binding isStarted,Source={StaticResource mainGrid}}" />
                 <Button Content="See all" ToolTip="See all living cells"  
-                        IsEnabled="{Binding isStarted, Source={StaticResource mainGrid}}"></Button>
+                        IsEnabled="{Binding isStarted, Source={StaticResource mainGrid}}" Click="SeeAllClick" ></Button>
                 <Label VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Content="Jump several &#xD;&#xA;steps ahead:"></Label>
                 <TextBox x:Name="tbJumpSteps" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  
-                         IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}"></TextBox>
-                <Button Content="Jump"  IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}"></Button>
+                         IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}" 
+                         SourceUpdated="OnContentChanged" Text="{Binding JumpSteps, Mode=TwoWay, Source={StaticResource mainGrid}}"  />
+                <Button Content="Jump"  IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}" 
+                        Command="{Binding JumpStepsCommand, Mode=OneWay, Source={StaticResource mainGrid}}" ></Button>
             </UniformGrid>
             <UniformGrid DockPanel.Dock="Top" Rows="1">
                 <Label HorizontalContentAlignment="Right" Content="Living cells: "></Label>
