--- a/ProjectIndividual.UI/CustomControls/StatementControl.xaml
+++ b/ProjectIndividual.UI/CustomControls/StatementControl.xaml
@@ -8,7 +8,7 @@
              xmlns:rulesEntities="clr-namespace:ProjectIndividual.Domain.RulesComponent.Entities;assembly=ProjectIndividual.Domain"
              xmlns:cellEntities="clr-namespace:ProjectIndividual.Domain.GridComponent.Entities;assembly=ProjectIndividual.Domain"
              mc:Ignorable="d" 
-             d:DesignHeight="30" Width="432">
+             d:DesignHeight="30" Width="483.327">
     <UserControl.Resources>
         <ObjectDataProvider x:Key="LogicalConnectorEnum" MethodName="GetValues" ObjectType="{x:Type System:Enum}" >
             <ObjectDataProvider.MethodParameters>
@@ -36,7 +36,8 @@
                   ItemsSource="{Binding Source={StaticResource CellStateEnum}}" Width="94"
                   SelectedItem="{Binding LogicalSentence.SeekState}" ></ComboBox>
         <Label HorizontalAlignment="Left" Margin="243,0,0,0" VerticalContentAlignment="Center" Content="in"></Label>
-        <ComboBox HorizontalAlignment="Left" Margin="268,0,0,0" 
+        <TextBox Text="{Binding LogicalSentence.Num}" Width="50" HorizontalAlignment="Left" Margin="268,0,0,0"></TextBox>
+        <ComboBox HorizontalAlignment="Left" Margin="318,0,0,0" 
                   ItemsSource="{Binding Source={StaticResource NeighbourHoodEnum}}" Width="163"
                   SelectedItem="{Binding LogicalSentence.ConsideredArea}"></ComboBox>
     </Grid>
