--- a/ProjectIndividual.UI/Views/MainWindow.xaml
+++ b/ProjectIndividual.UI/Views/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectIndividual.UI.Views"
         xmlns:viewModels="clr-namespace:ProjectIndividual.UI.ViewModels"
+         xmlns:ig="http://schemas.infragistics.com/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d"
-        Title="Cellular automaton" WindowState="Maximized">
+        Title="Cellular automaton" WindowState="Maximized" >
     <Window.Resources>
         <viewModels:GridViewModel x:Key="mainGrid"></viewModels:GridViewModel>
     </Window.Resources>
@@ -23,6 +25,7 @@
                     <MenuItem Header="_Load grid" Command="{Binding OpenLoadGridWindowCommand, Mode=OneWay, Source={StaticResource mainGrid}}"></MenuItem>
                     <MenuItem Header="_Reset grid" Command="{Binding ResetGridCommand, Mode=OneWay, Source={StaticResource mainGrid}}" ></MenuItem>
                     <MenuItem Header="_Save current grid" Command="{Binding SaveCurrentGridCommand, Mode=OneWay, Source={StaticResource mainGrid}}"  IsEnabled="{Binding isPaused, Source={StaticResource mainGrid}}"></MenuItem>
+                    <!--<MenuItem Header="_Exit" Command="{Binding CloseAppCommand, Mode=OneWay, Source={StaticResource mainGrid}}" ></MenuItem>-->
                     <!--<MenuItem Header="_Random grid"></MenuItem>-->
                 </MenuItem>
                 <MenuItem Header="_Info" ></MenuItem>
